# multithreading

./: .gitignore
mpi/: CMakeLists.txt
mpi/src/: hello_mpi.cpp  mpi_example.cpp
openmp/: CMakeLists.txt
openmp/src/: example_openmp.cpp
